deployments/kubernetes/amazon-crawler-api/overlays/staging/patch-deployment.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: amazon-crawler-api-lite
  namespace: task-processor
spec:
  template:
    spec:
      nodeSelector:
        node-role.kubernetes.io/agent: "true"
        task-processor/crawler-tier: lite
      tolerations:
        - key: "node-role.kubernetes.io/master"
          operator: "Exists"
          effect: "NoSchedule"
      containers:
        - name: amazon-crawler-api
          imagePullPolicy: Always
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: amazon-crawler-api-heavy
  namespace: task-processor
spec:
  template:
    spec:
      nodeSelector:
        node-role.kubernetes.io/agent: "true"
        task-processor/crawler-tier: heavy
      tolerations:
        - key: "node-role.kubernetes.io/master"
          operator: "Exists"
          effect: "NoSchedule"
      containers:
        - name: amazon-crawler-api
          imagePullPolicy: Always
