deployments/kubernetes/amazon-crawler-api/overlays/staging/patch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: amazon-crawler-api
  namespace: task-processor
spec:
  rules:
    - host: amazon-crawler-api.staging.example.com
